# ComputerScience-Data

./: .gitignore  AAPL_data.csv  GOOGL_data.csv  correlation.py  windows_wtf.md
DIY/3DPrint/: Ultimaker2Plus  models
Data/DataEngineering/: CICD.md  kubernetes.md  tools.md
Data/DataEngineering/Docker/images/workstation/code-server/rust-offline-seed/hungarian-rs/: Cargo.toml
Data/Dataviz/: ApacheSuperset.md
Scripts/Finance/: black_and_scholles.ipynb  black_and_scholles.py  notes_to_code.py  pricing.ipynb
Scripts/Interviews/: Coding.ipynb
Scripts/bash/: install-oh-my-zsh.sh  pipe.sh  pipe2.sh
Scripts/cuda/: Makefile  vector_mult.cu
Scripts/problems/: game_life.py
Scripts/python/: array.py  collections.py  cryptography_lib.py  explore_lib.py  generate_python_api_docs.py  instagram.py  io.py  iteration.py  np_array.py  np_array_split.py  numpy_mask_2D.py  python.md  regex.md  spotify.py  youtube.py
Scripts/python/project_template/: README.md  pyproject.toml
Scripts/python/project_template/project_template/: main.py
Scripts/utils/: bank_util.py  drive_download.py  merge_video_and_sub.py  rename_ubuntu_file_for_ntfs.py  translator_api.py  (+2 more)
Utils/: AutoKey_python_specials_key.md  Byobu_Commands.txt  Eclipse_cheatsheet.txt  GIT  Notes.txt  Packet_Tracer.txt  SSH  Shortcuts_AdobeAcrobat.adoc  Shortcuts_Atom.adoc  Shortcuts_AutoHotKey.ahk  Shortcuts_AutoKey.py  Shortcuts_GoogleChrome  Terminal_Shortcuts.txt  Ubuntu_Shortcuts.txt  VSCode.md  Word 2016 for Windows keyboard shortcuts.txt  man_shortcuts  pycharm_shortcuts  ubuntu_packages.sh
photos/: convert.py
(+918 files in other folders)
